# Chimera

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  License.txt  build.jam
Chimera/src/common/: CMakeLists.txt  boost_stubs.cpp  build.jam  chimera.cpp  chimera.hpp  common_types.hpp  compiler_intf.cpp  compiler_intf.hpp  preprocessor.hpp
Chimera/src/peripherals/clock/: CMakeLists.txt  build.jam  chimera_clock.cpp  clock.hpp  clock_intf.hpp  clock_types.hpp  clock_user.hpp
Chimera/src/peripherals/crc/: CMakeLists.txt  build.jam  chimera_crc.cpp  crc.hpp  crc_base.hpp  crc_intf.hpp  crc_types.hpp  crc_user.hpp
Chimera/src/peripherals/timer/: CMakeLists.txt  build.jam  chimera_timer.cpp  pwm_intf.hpp  pwm_types.hpp  timer.hpp  timer_intf.hpp  timer_types.hpp  timer_user.hpp
Chimera/src/pwm/: CMakeLists.txt  build.jam  chimera_pwm.cpp  pwm_intf.hpp  pwm_types.hpp  pwm_user.hpp
Chimera/src/threading/: CMakeLists.txt  build.jam  extensions.hpp  internal_types.hpp  mutex.hpp  queue.hpp  semaphore.hpp  thread.hpp  threading.hpp  threading_base.hpp  threading_intf.hpp  types.hpp
Chimera/src/threading/freertos/: CMakeLists.txt  freertos_hooks.cpp  freertos_hooks.hpp  freertos_queue_implementation.cpp  freertos_sync_primitives.hpp  freertos_threading_implementation.cpp
Chimera/src/threading/stl/: CMakeLists.txt  stl_queue_implementation.cpp  stl_sync_primitives.hpp  stl_threading_implementation.cpp
source/: CMakeLists.txt  version.hpp
source/drivers/: CMakeLists.txt
source/drivers/algorithm/: CMakeLists.txt  common_types.hpp  register_optimizer.cpp  register_optimizer.hpp
source/drivers/allocator/: CMakeLists.txt  allocator.hpp  chimera_allocator.cpp
source/drivers/assert/: CMakeLists.txt  assert_driver.cpp  assert_driver.hpp  assert_types.hpp
source/drivers/buffer/: CMakeLists.txt  buffer.hpp  buffer_base.hpp  buffer_intf.hpp  chimera_buffer.cpp
source/drivers/callback/: callback_intf.hpp  callback_types.hpp
source/drivers/common/: CMakeLists.txt  boost_stubs.cpp  chimera.cpp  chimera.hpp  common_types.hpp  compiler_intf.cpp  compiler_intf.hpp  preprocessor.hpp
source/drivers/config/: configuration.hpp
source/drivers/container/: container.hpp
source/drivers/event/: CMakeLists.txt  chimera_event.cpp  event.hpp  event_base.hpp  event_intf.hpp  event_types.hpp
source/drivers/function/: function_types.hpp
source/drivers/peripherals/: CMakeLists.txt  peripheral_manager.hpp  peripheral_types.hpp
source/drivers/peripherals/adc/: CMakeLists.txt  adc_intf.hpp  adc_types.hpp  adc_user.hpp  chimera_adc.cpp
source/drivers/peripherals/can/: CMakeLists.txt  can_intf.hpp  can_types.hpp  can_user.hpp  chimera_can.cpp
source/drivers/peripherals/clock/: CMakeLists.txt  chimera_clock.cpp  clock_intf.hpp  clock_types.hpp  clock_user.hpp
source/drivers/peripherals/crc/: CMakeLists.txt  chimera_crc.cpp  crc_intf.hpp  crc_types.hpp  crc_user.hpp
source/drivers/peripherals/dma/: CMakeLists.txt  chimera_dma.cpp  chimera_dma_util.cpp  dma_intf.hpp  dma_types.hpp  dma_user.hpp
source/drivers/peripherals/exti/: CMakeLists.txt  chimera_exti.cpp  exti_intf.hpp  exti_types.hpp  exti_user.hpp
source/drivers/peripherals/gpio/: CMakeLists.txt  chimera_gpio.cpp  gpio_intf.hpp  gpio_types.hpp  gpio_user.hpp
source/drivers/peripherals/i2c/: CMakeLists.txt  chimera_i2c.cpp  i2c_intf.hpp  i2c_types.hpp  i2c_user.hpp
source/drivers/peripherals/interrupt/: CMakeLists.txt  chimera_interrupt.cpp  interrupt_intf.hpp  interrupt_types.hpp  interrupt_user.hpp
source/drivers/peripherals/power/: CMakeLists.txt  chimera_power.cpp  power_intf.hpp  power_types.hpp  power_user.hpp
source/drivers/peripherals/sdio/: CMakeLists.txt  chimera_sdio.cpp  sdio_intf.hpp  sdio_types.hpp  sdio_user.hpp
source/drivers/peripherals/spi/: CMakeLists.txt  chimera_spi.cpp  spi_ext.hpp  spi_intf.hpp  spi_types.hpp  spi_user.hpp
source/drivers/peripherals/timer/: CMakeLists.txt  chimera_timer.cpp  timer_cache.cpp  timer_common_types.hpp  timer_intf.hpp  timer_types.hpp  timer_user.hpp
source/drivers/peripherals/uart/: CMakeLists.txt  chimera_uart.cpp  uart_intf.hpp  uart_types.hpp  uart_user.hpp
source/drivers/peripherals/usart/: CMakeLists.txt  chimera_usart.cpp  usart_intf.hpp  usart_types.hpp  usart_user.hpp
source/drivers/peripherals/usb/: CMakeLists.txt  chimera_usb.cpp  usb_intf.hpp  usb_types.hpp  usb_user.hpp
source/drivers/peripherals/watchdog/: CMakeLists.txt  chimera_watchdog.cpp  watchdog.hpp  watchdog_intf.hpp  watchdog_types.hpp  watchdog_user.hpp
source/drivers/pwm/: CMakeLists.txt  chimera_pwm.cpp  pwm_intf.hpp  pwm_user.hpp
source/drivers/scheduler/: CMakeLists.txt  scheduler_low_res.cpp  scheduler_polling.cpp  scheduler_types.hpp  scheduler_user.hpp
source/drivers/serial/: CMakeLists.txt  chimera_serial.cpp  serial_intf.hpp  serial_types.hpp  serial_user.hpp
source/drivers/system/: CMakeLists.txt  chimera_system.cpp  system_intf.hpp  system_types.hpp  system_user.hpp
source/drivers/threading/: CMakeLists.txt  threading_abstract.hpp  threading_detail.hpp  threading_extensions.hpp  threading_mutex.hpp  threading_queue.hpp  threading_semaphore.hpp  threading_thread.hpp  threading_thread_internal.hpp  threading_types.hpp  threading_user.hpp
source/drivers/threading/common/: CMakeLists.txt  threading_internal.hpp  threading_thread.cpp
source/drivers/threading/freertos/: CMakeLists.txt  freertos_hooks.cpp  freertos_hooks.hpp  freertos_mutex.cpp  freertos_queue.cpp  freertos_semaphore.cpp  freertos_sync_primitives.hpp  freertos_thread.cpp  (+1 more)
source/drivers/usb/: CMakeLists.txt  usb_intf.cpp  usb_intf.hpp  usb_thread.cpp  usb_thread.hpp
source/drivers/utilities/: CMakeLists.txt  chimera_utilities.cpp  instance_manager.hpp  macros.hpp  register_accessor.hpp  utilities.hpp
source/sim/: CMakeLists.txt
source/sim/clock/: sim_chimera_clock.cpp
source/sim/exti/: sim_chimera_gpio.cpp
source/sim/gpio/: sim_chimera_gpio.cpp
source/sim/timer/: sim_chimera_timer.cpp
source/sim/uart/: sim_chimera_uart.cpp
source/sim/watchdog/: sim_chimera_watchdog.cpp
(+543 files in other folders)
