# ====================================================
# Import sub-projects
# ====================================================
add_subdirectory("algorithm")
add_subdirectory("allocator")
add_subdirectory("assert")
add_subdirectory("buffer")
add_subdirectory("callback")
add_subdirectory("common")
add_subdirectory("config")
add_subdirectory("container")
add_subdirectory("event")
add_subdirectory("peripherals")
add_subdirectory("scheduler")
add_subdirectory("serial")
add_subdirectory("system")
add_subdirectory("threading")
add_subdirectory("usb")
add_subdirectory("utilities")