# ====================================================
# Import sub-projects
# ====================================================
add_subdirectory("clock")
add_subdirectory("config")
add_subdirectory("gpio")
add_subdirectory("pwm")
add_subdirectory("spi")
add_subdirectory("system")
add_subdirectory("timer")
add_subdirectory("uart")
add_subdirectory("usart")
add_subdirectory("watchdog")