# ====================================================
# Import sub-projects
# ====================================================
add_subdirectory("can")
add_subdirectory("clock")
add_subdirectory("crc")
add_subdirectory("dma")
add_subdirectory("exti")
add_subdirectory("gpio")
add_subdirectory("power")
add_subdirectory("spi")
add_subdirectory("timer")
add_subdirectory("uart")
add_subdirectory("usart")
add_subdirectory("watchdog")